@@ -3,6 +3,8 @@ PHP                                                                        NEWS
 ?? ??? 200?, PHP 5.1.2
 - Fixed bug #35431 (PDO crashes when using LAZY fetch with fetchAll). (Wez)
 - Fixed bug #35430 (PDO crashes on incorrect FETCH_FUNC use). (Tony)
+- Fixed bug #35399 (Since fix of bug #35273 SOAP decoding of
+  soapenc:base64binary fails). (Dmitry)
 
 28 Nov 2005, PHP 5.1.1
 - Disabled native date class to prevent pear::date conflict. (Ilia)
